--- a/container/test-app/iframe/iframeContainer.html
+++ b/container/test-app/iframe/iframeContainer.html
@@ -37,6 +37,14 @@
         }
       });
 
+      luigiContainer.addEventListener(Events.GO_BACK_REQUEST, event => {
+        console.log(event.detail);
+        alert(event.detail.goBackValue);
+      });
+      luigiContainer.addEventListener(Events.UPDATE_TOP_NAVIGATION_REQUEST, event => {
+        alert("UPDATE_TOP_NAVIGATION_REQUEST event received");
+      });
+
       luigiContainer.addEventListener(Events.CUSTOM_MESSAGE, event => {
         alert('Custom message received: ' + JSON.stringify(event.detail));
       });
