--- a/container/test-app/iframe/microfrontend.html
+++ b/container/test-app/iframe/microfrontend.html
@@ -69,22 +69,22 @@
     <script>
       // List of onclick handlers for client calls
 
-      function openAsModal(){
+      function openAsModal() {
         LuigiClient.linkManager().openAsModal('openAsModal-iframe', {
-        title:'Modal Title',
-        size: 'm'
-      });
+          title: 'Modal Title',
+          size: 'm',
+        });
       }
 
-      function openAsDrawer(){
+      function openAsDrawer() {
         LuigiClient.linkManager().openAsDrawer('openAsDrawer-iframe', {
-        size: 's'
-      });
+          size: 's',
+        });
       }
 
-      function openAsSplitview(){
+      function openAsSplitview() {
         LuigiClient.linkManager().openAsDrawer('openAsSplitview-iframe', {
-          size: 'l'
+          size: 'l',
         });
       }
 
