--- a/container/test-app/wc/clientAPI.html
+++ b/container/test-app/wc/clientAPI.html
@@ -109,7 +109,7 @@
             alert(event.detail.data);
           }
         });
-        luigiContainer.addEventListener(MFEventID.GO_BACK_REQUEST, event => {
+        luigiContainer.addEventListener(MFEventID.GO_BACK_REQUEST, (event) => {
           console.log(event);
         });
         luigiContainer.addEventListener(
