Add container tests show alert go back update top nav (#4021)
Add container tests for showAlert, goBack, updateTopNavigation
---------

Co-authored-by: Waldemar Mazurek <waldemar.mazurek@sap.com>
Co-authored-by: Waldemar Mazurek <waldemar.mazurek@accenture.com>

--- a/container/test-app/iframe/iframeContainer.html
+++ b/container/test-app/iframe/iframeContainer.html
@@ -29,12 +29,22 @@
       const luigiContainer = document.querySelector(
         '[data-test-id="iframe-based-container-test"]',
       );
+
       luigiContainer.addEventListener(Events.NAVIGATION_REQUEST, (event) => {
         console.log(event.detail);
         window.location.hash = event.detail.link;
         if (confirm('Do you want to leave this page?')) {
           window.location = event.detail.link;
         }
+      });
+
+      luigiContainer.addEventListener(Events.GO_BACK_REQUEST, (event) => {
+        console.log(event.detail);
+        alert(event.detail.goBackValue);
+      });
+
+      luigiContainer.addEventListener(Events.UPDATE_TOP_NAVIGATION_REQUEST, (event) => {
+        alert("UPDATE_TOP_NAVIGATION_REQUEST event received");
       });
 
       luigiContainer.addEventListener(Events.CUSTOM_MESSAGE, (event) => {
