--- a/container/test-app/iframe/microfrontend.html
+++ b/container/test-app/iframe/microfrontend.html
@@ -60,6 +60,9 @@
       <button onclick="testSetDirtyStatus()">test set dirty status</button>
       <button onclick="testShowAlert()">test show alert</button>
       <button onclick="testGetToken()">test get token</button>
+      <button onclick="testShowAlert()">test showAlert</button>
+      <button onclick="goBack()">test goBack()</button>
+      <button onclick="updateTopNavigation()">test updateTopNavigation()</button>
 
       <button onclick="openAsModal()">test openAsModal()</button>
       <button onclick="openAsDrawer()">test openAsDrawer()</button>
@@ -86,6 +89,14 @@
         LuigiClient.linkManager().openAsDrawer('openAsSplitview-iframe', {
           size: 'l',
         });
+      }
+
+      function goBack(){
+        LuigiClient.linkManager().goBack();
+      }
+
+      function updateTopNavigation(){
+        LuigiClient.LuigiClient.linkManager().updateTopNavigation();
       }
 
       function testNav() {
