Fixes Prettier issues

--- a/container/test-app/iframe/iframeContainer.html
+++ b/container/test-app/iframe/iframeContainer.html
@@ -45,7 +45,7 @@
       });
 
       luigiContainer.addEventListener(Events.UPDATE_TOP_NAVIGATION_REQUEST, (event) => {
-        alert("UPDATE_TOP_NAVIGATION_REQUEST event received");
+        alert('UPDATE_TOP_NAVIGATION_REQUEST event received');
       });
 
       luigiContainer.addEventListener(Events.CUSTOM_MESSAGE, (event) => {
