Adds correct deps

--- a/client-frameworks-support/testing-utilities/test/index.html
+++ b/client-frameworks-support/testing-utilities/test/index.html
@@ -65,7 +65,7 @@
   </body>
 </html>
 <script type="module">
-  import { LuigiMockEngine } from './node_modules/@luigi-project/testing-utilities/dist/index.js';
+  import { LuigiMockEngine } from '/node_modules/@luigi-project/testing-utilities/index.js';
 
   let initPostMessageMthd = await Promise.resolve(LuigiMockEngine.initPostMessageHook());
   let buttonArray = [
