Adds Prettier fixes

--- a/test/e2e-client-api-test-app/public/index.html
+++ b/test/e2e-client-api-test-app/public/index.html
@@ -1,12 +1,9 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
     <title>Luigi App</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link
-      href="/assets/css_variables.css"
-      rel="stylesheet"
-    />
+    <link href="/assets/css_variables.css" rel="stylesheet" />
     <link rel="stylesheet" href="/assets/luigi.css" />
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
   </head>
