--- a/container/test-app/compound/compoundClientAPI.html
+++ b/container/test-app/compound/compoundClientAPI.html
@@ -19,6 +19,7 @@
       compound web component based microfrontend
     </h3>
     <button id="luigi-update-context" type="button">Update context</button>
+    <span id="cc-ctx" style="display: none"></span>
 
     <!-- base scenario compound container-->
     <span>Below is a compound container example for testing functionality</span>
@@ -171,13 +172,16 @@
         console.log(event.detail);
         window.location.hash = event.detail.link;
       });
-      compoundContainer.addEventListener(MFEventID.GO_BACK_REQUEST, event => {
+      compoundContainer.addEventListener(MFEventID.GO_BACK_REQUEST, (event) => {
         console.log(event.detail);
         alert(event.detail.goBackValue);
       });
-      compoundContainer.addEventListener(MFEventID.UPDATE_TOP_NAVIGATION_REQUEST, event => {
-        alert("UPDATE_TOP_NAVIGATION_REQUEST event received");
-      });
+      compoundContainer.addEventListener(
+        MFEventID.UPDATE_TOP_NAVIGATION_REQUEST,
+        (event) => {
+          alert('UPDATE_TOP_NAVIGATION_REQUEST event received');
+        },
+      );
       compoundContainer.addEventListener(MFEventID.ALERT_REQUEST, (event) => {
         console.log(event.detail);
         alert(event.detail.text);
@@ -316,6 +320,9 @@
 
       document.querySelector('#luigi-update-context').addEventListener('click', () => {
         compoundContainer.updateContext({ newContextData: 'some data' });
+        document.querySelector('#cc-ctx').innerHTML = JSON.stringify(
+          compoundContainer.context,
+        );
       });
     </script>
   </body>
