--- a/container/test-app/iframe/iframeContainer.html
+++ b/container/test-app/iframe/iframeContainer.html
@@ -11,6 +11,7 @@
     </h3>
     <button id="btn-1">Send Custom Message to iFrame Container</button>
     <button id="update-ctx">Update Ctx</button>
+    <span id="container-ctx" style="display: none"></span>
     <button id="update-view-url" type="button">Update viewUrl</button>
     <button id="update-token">Update Access Token</button>
 
@@ -67,6 +68,9 @@
 
       updateContextButton.addEventListener('click', () => {
         luigiContainer.updateContext({ myContext: 'some context data' });
+        document.querySelector('#container-ctx').innerHTML = JSON.stringify(
+          luigiContainer.context,
+        );
       });
 
       updateViewUrlButton.addEventListener('click', () => {
