Fixes E2E tests in container

--- a/container/test-app/compound/compoundClientAPI.html
+++ b/container/test-app/compound/compoundClientAPI.html
@@ -103,7 +103,7 @@
         },
         children: [
           {
-            viewUrl: 'https://luigiwebcomponents.gitlab.io/layouts/panelHeader.js',
+            viewUrl: '../assets/panelHeader.js',
             context: {
               title: 'My Awesome Grid 000',
               description: 'Really awesome',
@@ -135,27 +135,27 @@
             },
           },
           {
-            viewUrl: 'https://luigiwebcomponents.gitlab.io/luigi-wc-mfe/main.js',
+            viewUrl: '../assets/mfeMain.js',
             context: {
               label: 'Another web component',
             },
           },
           {
             id: 'timerMFE',
-            viewUrl: 'https://luigiwebcomponents.gitlab.io/util/timer.js',
+            viewUrl: '../assets/timer.js',
             context: {
               min: 2,
               fontScale: '0.5',
             },
           },
           {
-            viewUrl: 'https://luigiwebcomponents.gitlab.io/luigi-wc-mfe/main.js',
+            viewUrl: '../assets/mfeMain.js',
             context: {
               label: 'My Label',
             },
           },
           {
-            viewUrl: 'https://luigiwebcomponents.gitlab.io/layouts/panelFooter.js',
+            viewUrl: '../assets/panelFooter.js',
             context: {
               footer: 'This is the end of awesomeness',
             },
