--- a/container/test-app/compound/compoundClientAPI.html
+++ b/container/test-app/compound/compoundClientAPI.html
@@ -119,7 +119,7 @@
                 name: 'sendInput',
                 action: 'update',
                 dataConverter: (data) => {
-                  console.log(
+                  console.info(
                     'dataConverter(): Received Custom Message from "input1" MF ' + data,
                   );
                   return 'new text: ' + data;
