Make context change trigger attributeChangedCallback

--- a/container/test-app/iframe/iframeContainer.html
+++ b/container/test-app/iframe/iframeContainer.html
@@ -68,9 +68,7 @@
 
       updateContextButton.addEventListener('click', () => {
         luigiContainer.updateContext({ myContext: 'some context data' });
-        document.querySelector('#container-ctx').innerHTML = JSON.stringify(
-          luigiContainer.context,
-        );
+        document.querySelector('#container-ctx').innerHTML = luigiContainer.context;
       });
 
       updateViewUrlButton.addEventListener('click', () => {
