--- a/container/test-app/wc/clientAPI.html
+++ b/container/test-app/wc/clientAPI.html
@@ -82,6 +82,43 @@
         });
       });
 
+      var alertSettings = {};
+
+      const showAnAlert = (alertSettings, luigiContainer, callback) => {
+        var popup = document.createElement('div');
+        var text = document.createTextNode(alertSettings.settings.text);
+        popup.appendChild(text);
+
+        var dismissButton = document.createElement('BUTTON');
+        var buttonText = document.createTextNode('Dismiss Alert');
+        dismissButton.addEventListener('click', () => {
+          console.log(
+            'Dismiss clicked core side. Sending close message to mf of id =',
+            alertSettings.settings.id,
+          );
+          // luigiContainer.closeAlert(alertSettings.settings.id, 'neverShowItAgain from wc');
+          callback({
+            id: alertSettings.settings.id,
+            dismissKey: 'neverShowItAgain from wc',
+          });
+          popup.style.display = 'none';
+        });
+        dismissButton.appendChild(buttonText);
+        const closeButton = document.createElement('button');
+        closeButton.innerHTML = 'Close Alert';
+        closeButton.addEventListener('click', () => {
+          callback({ id: alertSettings.settings.id });
+          popup.style.display = 'none';
+        });
+        popup.appendChild(dismissButton);
+        popup.appendChild(closeButton);
+
+        popup.style.visibility = 'visible';
+        popup.id = 'pop';
+        document.getElementsByTagName('body')[0].appendChild(popup);
+        return dismissButton;
+      };
+
       [...document.querySelectorAll('luigi-container')].forEach((luigiContainer) => {
         luigiContainer.addEventListener(MFEventID.NAVIGATION_REQUEST, (event) => {
           console.log(event.detail);
@@ -90,14 +127,21 @@
         luigiContainer.addEventListener(MFEventID.ALERT_REQUEST, (event) => {
           console.log(event.detail);
           alert(event.detail.text);
+          const settings = event.detail;
+          const callback = event.callback;
+          alertSettings.settings = settings;
+          showAnAlert(alertSettings, luigiContainer, callback);
         });
-        luigiContainer.addEventListener(MFEventID.GO_BACK_REQUEST, event => {
-          console.log(event.detail)
+        luigiContainer.addEventListener(MFEventID.GO_BACK_REQUEST, (event) => {
+          console.log(event.detail);
           alert(event.detail.goBackValue);
         });
-        luigiContainer.addEventListener(MFEventID.UPDATE_TOP_NAVIGATION_REQUEST, event => {
-          alert("UPDATE_TOP_NAVIGATION_REQUEST event received");
-        });
+        luigiContainer.addEventListener(
+          MFEventID.UPDATE_TOP_NAVIGATION_REQUEST,
+          (event) => {
+            alert('UPDATE_TOP_NAVIGATION_REQUEST event received');
+          },
+        );
         luigiContainer.addEventListener(
           MFEventID.SHOW_CONFIRMATION_MODAL_REQUEST,
           (event) => {
