--- a/container/test-app/wc/clientAPI.html
+++ b/container/test-app/wc/clientAPI.html
@@ -84,30 +84,31 @@
 
       var alertSettings = {};
 
-      const showAnAlert = (alertSettings, luigiContainer, callback) => {
+      const showAnAlert = (alertSettings, luigiContainer) => {
         var popup = document.createElement('div');
         var text = document.createTextNode(alertSettings.settings.text);
         popup.appendChild(text);
 
         var dismissButton = document.createElement('BUTTON');
+        dismissButton.setAttribute('id', 'dismissAlert');
         var buttonText = document.createTextNode('Dismiss Alert');
         dismissButton.addEventListener('click', () => {
           console.log(
             'Dismiss clicked core side. Sending close message to mf of id =',
             alertSettings.settings.id,
           );
-          // luigiContainer.closeAlert(alertSettings.settings.id, 'neverShowItAgain from wc');
-          callback({
-            id: alertSettings.settings.id,
-            dismissKey: 'neverShowItAgain from wc',
-          });
+          luigiContainer.closeAlert(
+            alertSettings.settings.id,
+            'neverShowItAgain from wc',
+          );
           popup.style.display = 'none';
         });
         dismissButton.appendChild(buttonText);
         const closeButton = document.createElement('button');
         closeButton.innerHTML = 'Close Alert';
+        closeButton.setAttribute('id', 'closeAlert');
         closeButton.addEventListener('click', () => {
-          callback({ id: alertSettings.settings.id });
+          luigiContainer.closeAlert(alertSettings.settings.id);
           popup.style.display = 'none';
         });
         popup.appendChild(dismissButton);
@@ -128,9 +129,8 @@
           console.log(event.detail);
           alert(event.detail.text);
           const settings = event.detail;
-          const callback = event.callback;
           alertSettings.settings = settings;
-          showAnAlert(alertSettings, luigiContainer, callback);
+          showAnAlert(alertSettings, luigiContainer);
         });
         luigiContainer.addEventListener(MFEventID.GO_BACK_REQUEST, (event) => {
           console.log(event.detail);
