--- a/container/test-app/iframe/iframeContainer.html
+++ b/container/test-app/iframe/iframeContainer.html
@@ -87,13 +87,22 @@
         popup.appendChild(text);
 
         var dismissButton = document.createElement('BUTTON');
-        var buttonText = document.createTextNode('Close Alert');
+        if(alertSettings.settings.notifyAlertClosed){
+          var buttonText = document.createTextNode('Close Alert using notifyAlertClosed');
+        }else{
+          var buttonText = document.createTextNode('Close Alert');
+        }
         dismissButton.addEventListener('click', () => {
           console.log(
             'Dismiss clicked core side. Sending close message to mf of id =',
             alertSettings.settings.id,
           );
-          luigiContainer.closeAlert(alertSettings.settings.id, 'neverShowItAgain');
+          if(alertSettings.settings.notifyAlertClosed){
+            luigiContainer.notifyAlertClosed(alertSettings.settings.id, 'neverShowItAgain');
+          }
+          else{
+            luigiContainer.closeAlert(alertSettings.settings.id, 'neverShowItAgain');
+          }
           popup.style.display = 'none';
         });
         dismissButton.appendChild(buttonText);
