Add missing context properties

--- a/container/test-app/iframe/iframeContainer.html
+++ b/container/test-app/iframe/iframeContainer.html
@@ -32,6 +32,9 @@
         '[data-test-id="iframe-based-container-test"]',
       );
 
+      luigiContainer.searchParams = {'search': 'param'};
+      luigiContainer.pathParams = {'path': 'param'};
+
       luigiContainer.addEventListener(Events.NAVIGATION_REQUEST, (event) => {
         console.log(event.detail);
         window.location.hash = event.detail.link;
