--- a/container/test-app/iframe/iframeContainer.html
+++ b/container/test-app/iframe/iframeContainer.html
@@ -32,8 +32,8 @@
         '[data-test-id="iframe-based-container-test"]',
       );
 
-      luigiContainer.searchParams = {'search': 'param'};
-      luigiContainer.pathParams = {'path': 'param'};
+      luigiContainer.searchParams = { search: 'param' };
+      luigiContainer.pathParams = { path: 'param' };
 
       luigiContainer.addEventListener(Events.NAVIGATION_REQUEST, (event) => {
         console.log(event.detail);
