Container: Missing context properties  (#4133)

--- a/container/test-app/iframe/iframeContainer.html
+++ b/container/test-app/iframe/iframeContainer.html
@@ -32,6 +32,8 @@
         '[data-test-id="iframe-based-container-test"]',
       );
 
+      luigiContainer.searchParams = { search: 'param' };
+      luigiContainer.pathParams = { path: 'param' };
       luigiContainer.nodeParams = { node: 'params' };
 
       luigiContainer.addEventListener(Events.NAVIGATION_REQUEST, (event) => {
