--- a/container/test-app/wc/clientAPI.html
+++ b/container/test-app/wc/clientAPI.html
@@ -105,10 +105,18 @@
         });
         dismissButton.appendChild(buttonText);
         const closeButton = document.createElement('button');
-        closeButton.innerHTML = 'Close Alert';
+        if (alertSettings.settings.notifyAlertClosed) {
+          closeButton.innerHTML = 'Close Alert using notifyAlertClosed';
+        } else {
+          closeButton.innerHTML = 'Close Alert';
+        }
         closeButton.setAttribute('id', 'closeAlert');
         closeButton.addEventListener('click', () => {
-          luigiContainer.closeAlert(alertSettings.settings.id);
+          if (alertSettings.settings.notifyAlertClosed) {
+            luigiContainer.notifyAlertClosed(alertSettings.settings.id);
+          } else {
+            luigiContainer.closeAlert(alertSettings.settings.id);
+          }
           popup.style.display = 'none';
         });
         popup.appendChild(dismissButton);
