tests backdrop + tab navigation

--- a/test/e2e-js-test-application/public/examples/microfrontends/multipurpose.html
+++ b/test/e2e-js-test-application/public/examples/microfrontends/multipurpose.html
@@ -63,6 +63,8 @@
       >
         Open <code>/home/one</code> as split view
       </button>
+      <button class="addBackdrop" onclick="LuigiClient.uxManager().addBackdrop()">add backdrop</button>
+      <button class="removeBackdrop" onclick="LuigiClient.uxManager().removeBackdrop()">remove backdrop</button>
     </div>
 
     <script>
