--- a/container/test-app/iframe/iframeContainer.html
+++ b/container/test-app/iframe/iframeContainer.html
@@ -149,6 +149,10 @@
         );
       });
 
+      luigiContainer.addEventListener(Events.CONFIRMATION_MODAL_CLOSED, (event) => {
+        console.log(Events.CONFIRMATION_MODAL_CLOSED, event);
+      });
+
       luigiContainer.addEventListener(Events.SHOW_LOADING_INDICATOR_REQUEST, (event) => {
         console.log(Events.SHOW_LOADING_INDICATOR_REQUEST, event);
         alert(
