Fixes iframe issue

--- a/container/test-app/compound/compoundClientAPI.html
+++ b/container/test-app/compound/compoundClientAPI.html
@@ -203,6 +203,7 @@
           if (event.callback) {
             event.callback(val);
           }
+          luigiContainer.notifyConfirmationModalClosed(val);
         },
       );
       compoundContainer.addEventListener(MFEventID.CONFIRMATION_MODAL_CLOSED, (event) => {
