--- a/container/test-app/iframe/iframeContainer.html
+++ b/container/test-app/iframe/iframeContainer.html
@@ -146,9 +146,7 @@
         console.log(Events.SHOW_CONFIRMATION_MODAL_REQUEST, event);
         const data = event.detail;
         const val = confirm(data.body);
-        alert(
-          'show-confirmation-modal message received: ' + JSON.stringify(data),
-        );
+        alert('show-confirmation-modal message received: ' + JSON.stringify(data));
         luigiContainer.notifyConfirmationModalClosed(val);
       });
 
