applied for alert_request

--- a/container/test-app/iframe/iframeContainer.html
+++ b/container/test-app/iframe/iframeContainer.html
@@ -122,6 +122,7 @@
 
       luigiContainer.addEventListener(Events.ALERT_REQUEST, (event) => {
         console.log('params:', Events.ALERT_REQUEST, event);
+        console.log('payload', event.payload);
         alert('show-alert-request message received: ' + JSON.stringify(event.detail));
         console.log(event.detail.data.data);
         alertSettings = event.detail.data.data;
