--- a/container/test-app/wc/clientAPI.html
+++ b/container/test-app/wc/clientAPI.html
@@ -135,6 +135,7 @@
         });
         luigiContainer.addEventListener(MFEventID.ALERT_REQUEST, (event) => {
           console.log(event.detail);
+          console.log('payload', event.payload);
           alert(event.detail.text);
           const settings = event.detail;
           alertSettings.settings = settings;
