--- a/container/test-app/compound/compoundClientAPI.html
+++ b/container/test-app/compound/compoundClientAPI.html
@@ -173,6 +173,52 @@
         ],
       };
 
+      var alertSettings = {};
+
+      const showAnAlert = (alertSettings, luigiContainer) => {
+        var popup = document.createElement('div');
+        var text = document.createTextNode(alertSettings.settings.text);
+        popup.appendChild(text);
+
+        var dismissButton = document.createElement('BUTTON');
+        dismissButton.setAttribute('id', 'dismissAlert');
+        var buttonText = document.createTextNode('Dismiss Alert');
+        dismissButton.addEventListener('click', () => {
+          console.log(
+            'Dismiss clicked core side. Sending close message to mf of id =',
+            alertSettings.settings.id,
+          );
+          luigiContainer.notifyAlertClosed(
+            alertSettings.settings.id,
+            'neverShowItAgain from wc',
+          );
+          popup.style.display = 'none';
+        });
+        dismissButton.appendChild(buttonText);
+        const closeButton = document.createElement('button');
+        if (alertSettings.settings.notifyAlertClosed) {
+          closeButton.innerHTML = 'Close Alert using notifyAlertClosed';
+        } else {
+          closeButton.innerHTML = 'Close Alert';
+        }
+        closeButton.setAttribute('id', 'closeAlert');
+        closeButton.addEventListener('click', () => {
+          if (alertSettings.settings.notifyAlertClosed) {
+            luigiContainer.notifyAlertClosed(alertSettings.settings.id);
+          } else {
+            luigiContainer.notifyAlertClosed(alertSettings.settings.id);
+          }
+          popup.style.display = 'none';
+        });
+        popup.appendChild(dismissButton);
+        popup.appendChild(closeButton);
+
+        popup.style.visibility = 'visible';
+        popup.id = 'pop';
+        document.getElementsByTagName('body')[0].appendChild(popup);
+        return dismissButton;
+      };
+
       compoundContainer.init();
       compoundContainer.addEventListener(MFEventID.NAVIGATION_REQUEST, (event) => {
         console.log(event.detail);
@@ -188,21 +234,12 @@
           alert('UPDATE_TOP_NAVIGATION_REQUEST event received');
         },
       );
-      compoundContainer.addEventListener(MFEventID.ALERT_REQUEST, (event) => {
-        console.log(event.detail);
-        alert(event.detail.text);
-      });
       compoundContainer.addEventListener(
         MFEventID.SHOW_CONFIRMATION_MODAL_REQUEST,
         (event) => {
           const data = event.detail;
-          console.log(data);
           const val = confirm(data.body);
-          // send back to mf alert.answer with data
-          window.postMessage('alert.answer', data);
-          if (event.callback) {
-            event.callback(val);
-          }
+          compoundContainer.notifyConfirmationModalClosed(val);
         },
       );
       compoundContainer.addEventListener(
@@ -254,6 +291,14 @@
           alert('LuigiClient.uxManager().hideAppLoadingIndicator()');
         },
       );
+
+      compoundContainer.addEventListener(MFEventID.ALERT_REQUEST, (event) => {
+        console.log('event', event.detail);
+        alert(event.detail.text);
+        const settings = event.detail;
+        alertSettings.settings = settings;
+        showAnAlert(alertSettings, compoundContainer);
+      });
 
       // linkManager listeners:
       // path exists
