--- a/container/test-app/wc/clientAPI.html
+++ b/container/test-app/wc/clientAPI.html
@@ -161,6 +161,7 @@
             if (event.callback) {
               event.callback(val);
             }
+            luigiContainer.notifyConfirmationModalClosed(val);
           },
         );
         luigiContainer.addEventListener(MFEventID.CUSTOM_MESSAGE, (event) => {
